// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:tabs as form item 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Tabs amis-Tabs--line"
            data-role="container"
          >
            <div
              class="amis-Tabs-linksContainer-wrapper"
            >
              <div
                class="amis-Tabs-linksContainer"
              >
                <div
                  class="amis-Tabs-linksContainer-main"
                >
                  <ul
                    class="amis-Tabs-links"
                    role="tablist"
                  >
                    <li
                      class="amis-Tabs-link"
                    >
                      <a
                        title="Tab 1"
                      >
                        <span
                          class="amis-Tabs-link-text"
                        >
                          Tab 1
                        </span>
                      </a>
                    </li>
                    <li
                      class="amis-Tabs-link is-active"
                    >
                      <a
                        title="Tab 2"
                      >
                        <span
                          class="amis-Tabs-link-text"
                        >
                          Tab 2
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="amis-Tabs-content"
            >
              <div
                class="amis-Tabs-pane"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    Content 1
                  </span>
                </span>
              </div>
              <div
                class="in is-active amis-Tabs-pane"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    Content 2
                  </span>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              submitText
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs change active tab 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--line tabs-wrapper"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
                <span
                  class="amis-Tabs-link-close"
                >
                  <icon-mock
                    classname="amis-Tabs-link-close-icon icon-close"
                    icon="close"
                  />
                </span>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
                <span
                  class="amis-Tabs-link-close"
                >
                  <icon-mock
                    classname="amis-Tabs-link-close-icon icon-close"
                    icon="close"
                  />
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs change active tab 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--line tabs-wrapper"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
                <span
                  class="amis-Tabs-link-close"
                >
                  <icon-mock
                    classname="amis-Tabs-link-close-icon icon-close"
                    icon="close"
                  />
                </span>
              </li>
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
                <span
                  class="amis-Tabs-link-close"
                >
                  <icon-mock
                    classname="amis-Tabs-link-close-icon icon-close"
                    icon="close"
                  />
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
        <div
          class="in is-active amis-Tabs-pane"
        >
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="c"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    文本3
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-control cxd-TextControl"
            >
              <div
                class="amis-TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="c"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="d"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    文本4
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-control cxd-TextControl"
            >
              <div
                class="amis-TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="d"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--card"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--radio"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 3`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--vertical"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksWrapper"
      >
        <ul
          class="amis-Tabs-links"
          role="tablist"
        >
          <li
            class="amis-Tabs-link is-active"
          >
            <a
              title="基本配置"
            >
              <span
                class="amis-Tabs-link-text"
              >
                基本配置
              </span>
            </a>
          </li>
          <li
            class="amis-Tabs-link"
          >
            <a
              title="其他配置"
            >
              <span
                class="amis-Tabs-link-text"
              >
                其他配置
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 4`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--chrome"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksWrapper"
      >
        <ul
          class="amis-Tabs-links"
          role="tablist"
        >
          <li
            class="amis-Tabs-link is-active"
          >
            <a
              title="基本配置"
            >
              <span
                class="amis-Tabs-link-text"
              >
                基本配置
              </span>
            </a>
            <div
              class="chrome-tab-background"
            >
              <svg
                class="chrome-tab-background--right"
                viewBox="0 0 124 124"
              >
                <path
                  d="M0,0 C0,68.483309 55.516691,124 124,124 L0,124 L0,-1 C0.00132103964,-0.667821298 0,-0.334064922 0,0 Z"
                />
              </svg>
              <svg
                class="chrome-tab-background--left"
                viewBox="0 0 124 124"
              >
                <path
                  d="M124,0 L124,125 L0,125 L0,125 C68.483309,125 124,69.483309 124,1 L123.992,0 L124,0 Z"
                />
              </svg>
            </div>
          </li>
          <li
            class="amis-Tabs-link"
          >
            <a
              title="其他配置"
            >
              <span
                class="amis-Tabs-link-text"
              >
                其他配置
              </span>
            </a>
            <div
              class="chrome-tab-background"
            >
              <svg
                class="chrome-tab-background--right"
                viewBox="0 0 124 124"
              >
                <path
                  d="M0,0 C0,68.483309 55.516691,124 124,124 L0,124 L0,-1 C0.00132103964,-0.667821298 0,-0.334064922 0,0 Z"
                />
              </svg>
              <svg
                class="chrome-tab-background--left"
                viewBox="0 0 124 124"
              >
                <path
                  d="M124,0 L124,125 L0,125 L0,125 C68.483309,125 124,69.483309 124,1 L123.992,0 L124,0 Z"
                />
              </svg>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 5`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--simple"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 6`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--strong"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 7`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--tiled"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 8`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--sidebar sidebar--right"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksWrapper"
      >
        <ul
          class="amis-Tabs-links"
          role="tablist"
        >
          <li
            class="amis-Tabs-link is-active"
          >
            <a
              title="基本配置"
            >
              <span
                class="amis-Tabs-link-text"
              >
                基本配置
              </span>
            </a>
          </li>
          <li
            class="amis-Tabs-link"
          >
            <a
              title="其他配置"
            >
              <span
                class="amis-Tabs-link-text"
              >
                其他配置
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs toolbar 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--line"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper amis-Tabs-linksContainer-wrapper--toolbar"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="基本配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    基本配置
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="其他配置"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    其他配置
                  </span>
                </a>
              </li>
              <div
                class="amis-Tabs-toolbar toolbarClassName"
              >
                <button
                  class="amis-Button amis-Button--default amis-Button--size-sm"
                  type="button"
                >
                  <span>
                    按钮
                  </span>
                </button>
              </div>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              <p>
                tab1 内容
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs with collapseOnExceed: popover show 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Tabs amis-Tabs--tiled"
      data-role="container"
    >
      <div
        class="amis-Tabs-linksContainer-wrapper"
      >
        <div
          class="amis-Tabs-linksContainer"
        >
          <div
            class="amis-Tabs-linksContainer-main"
          >
            <ul
              class="amis-Tabs-links"
              role="tablist"
            >
              <li
                class="amis-Tabs-link is-active"
              >
                <a
                  title="Tab 1"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    Tab 1
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  title="Tab 2"
                >
                  <span
                    class="amis-Tabs-link-text"
                  >
                    Tab 2
                  </span>
                </a>
              </li>
              <li
                class="amis-Tabs-link"
              >
                <a
                  class="amis-Tabs-togglor is-opened"
                >
                  <span>
                    更多
                  </span>
                  <span
                    class="amis-Tabs-togglor-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="amis-Tabs-content"
      >
        <div
          class="in is-active amis-Tabs-pane"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              Content 1
            </span>
          </span>
        </div>
      </div>
      <div
        class="has-popover"
        data-amis-theme="cxd"
      >
        <div
          class="amis-PopOver amis-Tabs-PopOver"
          role="popover"
          style="display: block; min-width: auto; left: 0px; top: 0px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="cxd-PopOver-overlay"
          />
          <ul
            class="amis-Tabs-PopOverList amis-DropDown-menu"
          >
            <li
              class="amis-Tabs-link"
            >
              <a
                title="Tab 3"
              >
                <span
                  class="amis-Tabs-link-text"
                >
                  Tab 3
                </span>
              </a>
            </li>
            <li
              class="amis-Tabs-link"
            >
              <a
                title="Tab 4"
              >
                <span
                  class="amis-Tabs-link-text"
                >
                  Tab 4
                </span>
              </a>
            </li>
            <li
              class="amis-Tabs-link"
            >
              <a
                title="Tab 5"
              >
                <span
                  class="amis-Tabs-link-text"
                >
                  Tab 5
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
